# rusty-mesh

./: .dockerignore  .env.development.sample  .env.production.sample  .env.sample  .env.staging.sample  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  bacon.toml  package.json  prettier.config.mjs
.cargo/: config.toml
.github/: pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
config/: base.toml  development.toml  production.toml  staging.toml
demo-microservices/: .env.sample  .gitignore  README.md  compose.yaml
demo-microservices/cart-service/: .dockerignore  Dockerfile  main.py  registry_client.py
demo-microservices/catalog-service/: Cargo.toml  Dockerfile
demo-microservices/catalog-service/src/: main.rs  registry_client.rs
demo-microservices/order-service/: Dockerfile  package.json
demo-microservices/order-service/src/: index.js  registry-client.js
demo-microservices/user-service/: Cargo.toml  Dockerfile
demo-microservices/user-service/src/: main.rs  registry_client.rs
k6-traffic-simulation/: .env.sample  README.md  main.js
postman/: README.md  demo-microservices.postman_collection.json  mesh-core.postman_collection.json
src/: lib.rs  main.rs
src/core/: mod.rs  router.rs
src/core/structs/: mod.rs  registry_response.rs  (+2 more)
src/middlewares/: logging_middleware.rs  mesh_auth_middleware.rs  mod.rs  request_timeout_middleware.rs
src/utils/: docker_port_mapping.rs  load_config.rs  load_env.rs  mod.rs
tests/: controllers.rs
tests/common/: mod.rs  shared.rs
(+14 files in other folders)
